# qpeek

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.build  LICENSE  Makefile  README.md  eslint.config.js  lint-staged.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pr-checks.yml  release.yml
docs/: ACRHITECTURE.md  CLI.md  CONFIG.md
src/: App.vue  vite-env.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs
