[package]
name = "qpeek"
version = "0.0.0"
description = "A blazing fast, cross-platform floating markdown cheat-sheet viewer."
authors = ["qdiaps@gmail.com"]
edition = "2024"
license = "MIT"

[lib]
name = "qpeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

