[package]
name = "qpeek"
version = "0.0.0"
description = "A blazing fast, cross-platform floating markdown cheat-sheet viewer."
authors = ["qdiaps@gmail.com"]
edition = "2024"
license = "MIT"

[lib]
name = "qpeek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.6", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
